--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,9 @@
           <%= link_to "Po-Potins", root_path %>
         </h1>
         <nav>
-          <%= link_to "La Team", team_path %>
-          <%= link_to "Nous Contacter", contact_path %>
+          <%= link_to "Sign up", new_user_path %>
+          <%= link_to "About us", team_path %>
+          <%= link_to "Contact", contact_path %>
         </nav>
       </header>
 
